--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ python:
   - "3.8"
   - "3.8-dev"  # 3.8 development branch
 install:
-  - pip install -r requirements.txt
+  - pip install -r python3
 script:
   - python3 test_rpn.py
