--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ python:
   - "3.7"
   - "3.8"
   - "3.8-dev"  # 3.8 development branch
-install:
-  - pip install -r python3
+virtualenv:
+  system_site_packages: true
+# install:
+#   - pip install -r python3
 script:
   - python3 test_rpn.py
